# radix

./: Cargo.toml  README.md  build.rs  nconv  radix
src/: conversions.rs  lib.rs  main.rs
ui/: appwindow.slint
