[package]
name = "radix"
version = "0.1.0"
authors = ["Andrew Bond <abond@pmeasuring.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
num-bigint = "0.4.5"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
